CreateNetSheetReport, CreateProfileReport storyboards: Provided appropriate reference for ViewControllers embedded within containerView so that respective IBOutlets can easily be accessed from parent view controller

--- a/T365CalculatorScreens/Base.lproj/CreateNetSheetReport.storyboard
+++ b/T365CalculatorScreens/Base.lproj/CreateNetSheetReport.storyboard
@@ -55,7 +55,7 @@
                                     <constraint firstAttribute="height" constant="149" id="v4e-Q8-R2c"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="Wnm-fn-o2Q" kind="embed" id="IA5-Kn-Fsr"/>
+                                    <segue destination="Wnm-fn-o2Q" kind="embed" identifier="EmbedContent" id="IA5-Kn-Fsr"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -80,7 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bO8-6D-Ccd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1299" y="-194"/>
+            <point key="canvasLocation" x="1095" y="-334"/>
         </scene>
         <!--Options - CreateNetSheetReport-->
         <scene sceneID="eQ8-Zq-aOc">
