Changed static tableview in Payoff screen to dynamic table view

--- a/T365CalculatorScreens/Base.lproj/CreateNetSheetReport.storyboard
+++ b/T365CalculatorScreens/Base.lproj/CreateNetSheetReport.storyboard
@@ -353,7 +353,7 @@
                                                     <rect key="frame" x="15" y="28" width="276" height="20"/>
                                                     <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="Mct-Xb-mv0"/>
                                                     </connections>
@@ -375,7 +375,7 @@
                                                     <rect key="frame" x="307" y="28" width="278" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="NmU-47-dnO"/>
                                                     </connections>
@@ -427,7 +427,7 @@
                                                     <rect key="frame" x="15" y="44" width="570" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="YNd-gg-pWJ"/>
                                                     </connections>
@@ -469,7 +469,7 @@
                                                     <rect key="frame" x="15" y="44" width="570" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="c2C-ev-7rk"/>
                                                     </connections>
@@ -511,7 +511,7 @@
                                                     <rect key="frame" x="15" y="44" width="570" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="tLs-VB-oQ5"/>
                                                     </connections>
@@ -553,7 +553,7 @@
                                                     <rect key="frame" x="15" y="44" width="400" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="RUQ-PL-yTC"/>
                                                     </connections>
@@ -576,7 +576,7 @@
                                                     <rect key="frame" x="505" y="44" width="80" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="lu8-di-uCH"/>
                                                     </connections>
@@ -599,7 +599,7 @@
                                                     <rect key="frame" x="430" y="44" width="60" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="Os4-AU-6pa"/>
                                                     </connections>
@@ -655,7 +655,7 @@
                                                     <rect key="frame" x="15" y="44" width="570" height="20"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="done"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="9vF-nB-cgV" id="pQH-x1-Y9d"/>
                                                     </connections>
